step 7. integration hebergement cards + minor corrections (paddings/gaps)

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
     box-sizing: border-box;
 }
 
-h2, h3 {
+h1, h2, h3 {
     margin: 0;
 }
 
@@ -84,8 +84,11 @@ p {
     margin: 30px 0;
 }
 
+.section-filtres {
+    padding: 30px 0 35px 0;
+}
+
 .section-title {
-    /* margin: 30px 0 0 0; vérifier les section-title précédant Hébergements*/
     font-size: 22px;
 }
 
@@ -204,7 +207,6 @@ p {
     align-items: center;
     gap: 10px;
     height: 24px;
-    margin-bottom: 35px; /* ce 35 px est à factoriser, on le trouve partout */
 }
 
 .infobulle-logo {
@@ -421,7 +423,8 @@ p {
     /* header */
     header {
         flex-direction: column;
-        padding: 0 50px;
+        padding: 0;
+        align-items: center;
     }
 
     nav {
@@ -430,20 +433,24 @@ p {
         justify-content: space-between;
     }
 
-    .nav-item {
+    .nav-item, .nav-item:hover{
         flex: 1;
         text-align: center;
-    }
-
-    .nav-item:hover {
         border-bottom-style: solid;
         border-top-style: none;
-        padding: 16px 0 14px 0;
+        border-color: var(--main-bg-color);
+        padding: 16px 0;
+        border-width: 2px;
+    }
+
+    /* en version mobile = tactile, donc hover n'a aucun intérêt. Davantage clair en appliquant le style de barre sur la classe .active */
+    .nav-item.active { 
+        border-color: var(--main-color);
     }
 
     /* search bar */
     .section-filtres {
-        padding: 0 50px;
+        padding: 30px 20px 25px 20px;
     }
 
     .search-text {
@@ -505,11 +512,12 @@ p {
     
     .hebergements-and-populaires {
         flex-direction: column-reverse;
+        gap: 15px;
     }
 
     section.hebergements {
         background-color: var(--full-white);
-        padding: 0 50px;
+        padding: 20px;
     }
     
     .hebergements-cards {
@@ -532,6 +540,14 @@ p {
 
     .populaires-cards .card {
         margin-top: 15px;
+    }
+
+    .populaires {
+        margin: 0;
+    }
+
+    .hebergements {
+        gap: 15px;
     }
 
 }
